[package]
name = "redis-sys-status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
redis = { version = "*", features = ["tokio-comp"] }
sys-info = "*"
systemstat = "*"
pnet = "*"
sysinfo = "0.22.4"